# proyecto-be-fe

./: .gitignore  AUDITORIA.md  BITACORA.md  LICENSE  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/prompts/: security-review.prompt.md
_docs/: accesibilidad-aria-wcag.md  api-endpoints.md  architecture.md  database-schema.md  guion-video.md  owasp-top-10.md
_docs/HUs/: HU-001_registro_de_cuenta.md
_docs/RFs/: RF-001_registro_de_usuario.md  RF-009_proteccion_de_rutas.md
_docs/conceptos/: accesibilidad-aria-wcag.md  owasp-top-10.md  (+1 more)
be/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
be/alembic/: env.py  script.py.mako
be/alembic/versions/: a7c03fd8169f_create_users_and_password_reset_tokens_.py  c3d5e7f9a1b2_add_email_verification.py  d4e6f8a0b2c4_split_full_name_into_first_last_name.py  e5f7a9b1c3d5_add_locale_to_users.py
be/app/: __init__.py  config.py  database.py  dependencies.py  main.py
be/app/models/: __init__.py  email_verification_token.py  password_reset_token.py  user.py
be/app/routers/: __init__.py  auth.py  users.py
be/app/schemas/: __init__.py  user.py
be/app/services/: __init__.py  auth_service.py
be/app/tests/: __init__.py  conftest.py  test_auth.py
be/app/utils/: __init__.py  audit_log.py  email.py  limiter.py  security.py
docs/: guion-video.md  jwt.md
fe/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
scripts/: start.sh
(+66 files in other folders)
